<resources>
    <string name="app_name">WasteManagementSystem</string>
    <string name="fullName">Full Name *</string>
    <string name="address">Address *</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="municipality">Municipality</string>
    <string name="ward">Ward</string>
    <string name="phoneNumber">Phone Number *</string>
    <string name="DOB">Date of Birth *</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="signUp">SignUp</string>
    <string name="userName">User Name</string>
    <string name="password">Password *</string>
    <string name="gender">Gender *</string>
    <string name="signup">Signup</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Others</string>
    <string name="termsAndCondition">Terms and Conditions</string>

    <string-array name="countries">
        <item>Nepal</item>
        <item>India</item>
        <item>Pakistan</item>
        <item>China</item>
    </string-array>

    <string-array name="Day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>

    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="close_button">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>

    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>

    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_email_id">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="passowrd">Password</string>

</resources>