<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/signupTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImageView"
            android:layout_marginLeft="16dp"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/signupTitleTextView"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/fullName"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/addressEdiText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/fullNameEditText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/mobileEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/addressEdiText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/mobileNumber"
            android:inputType="number"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <LinearLayout
            android:id="@+id/genderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileEditText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/othersRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/countryLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderLinearLayout"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country" />


            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edittext_background"
                android:entries="@array/countries" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsAndConditionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryLinearLayout"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/termsAndConditionCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termsAndCondition" />
        </LinearLayout>

        <Button
            android:id="@+id/singupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/termsAndConditionLinearLayout"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button"
            android:text="@string/signup"
            android:textAllCaps="false" />

    </RelativeLayout>
</ScrollView>